# python-project-50

./: .coverage  .pre-commit-config.yaml  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: python.yml
gendiff/: __init__.py  gendiff.py  parser.py  tree_diff.py
gendiff/formatters/: __init__.py  abstraction.py  constants.py  json.py  plain.py  stylish.py
gendiff/scripts/: file_parser.py  gendiff.py
tests/: test_gendiff.py
tests/fixtures/nested/: expexted_abstraction.txt
tests/fixtures/plain/: expected_plain_abstraction.txt
tests/fixtures/to_json/: json_expected.txt
