[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["saintodes <odes36@gmail.com>"]
readme = "README.md"
packages = [{include = "gendiff"}]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
isort = "^5.12.0"
pre-commit = "^3.3.1"
black = "^23.3.0"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 85
target-version = ['py37']

[tool.isort]
profile = "black"
